<resources>
    <string name="app_name">CondManager</string>
    <string name="login">Login</string>
    <string name="casdastre_se">Casdastre - se</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="cpf">Cpf</string>
    <string name="telefone">Telefone</string>
    <string name="rg">RG</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="apartamentos">Apartamentos</string>
    <string name="despesas">Despesas</string>
    <string name="propietario">Propietario</string>
    <string name="vazio">vazio</string>
    <string name="inquilino">inquilino</string>
    <string name="n_do_apartamento">N° do apartamento</string>
    <string name="n_de_quartos">N° de quartos</string>
    <string name="salvar">Salvar</string>
    <string name="email">Email</string>
    <string name="proprietarios">Proprietários</string>
</resources>
