<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.CadastroActivity">
    <ImageView
        android:id="@+id/prediosBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/predios"/>
    <ImageView
        android:src="@color/colorPrimary"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
                <EditText
                    android:id="@+id/edit_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf" />
                <EditText
                    android:id="@+id/edit_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone" />
                <EditText
                    android:id="@+id/edit_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/edit_passwoord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edit_passwoord2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/cardCadastro"
            android:layout_below="@id/cardCadastro"
            android:layout_marginTop="100dp"
            android:background="@drawable/login_background"
            android:padding="10dp"
            android:text="@string/cadastrar" />

    </RelativeLayout>




</android.support.design.widget.CoordinatorLayout>