<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.AdicionarApartamentoActivity"
    android:background="@drawable/predios"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numero_apartamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/n_do_apartamento"
                android:inputType="number" />

            <EditText
                android:id="@+id/quantidade_quartos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/n_de_quartos"
                android:inputType="number" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/propietario_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/propietario" />

                <RadioButton
                    android:id="@+id/inquilino_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inquilino" />

                <RadioButton
                    android:id="@+id/vazio_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vazio" />
            </RadioGroup>

            <Spinner
                android:id="@+id/proprietarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"></Spinner>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_gravity="end"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"/>

</LinearLayout>