<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.LoginActivity">
    <ImageView
        android:id="@+id/prediosBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/predios"/>
    <ImageView
        android:src="@color/colorPrimary"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/cardLogin"
            android:layout_below="@+id/cardLogin"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/login_background"
            android:text="@string/login" />

        <Button
            android:id="@+id/cadastrar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_alignEnd="@+id/cardLogin"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_background"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/casdastre_se" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>